--- a/assets/my/css/style.css
+++ b/assets/my/css/style.css
@@ -52,3 +52,11 @@ label {
   font-size: small;
   font-style: italic;
 }
+
+footer{
+  display: flex;
+  justify-content: center;
+  padding: 5px;
+  background-color: #45a1ff;
+  color: #fff;
+}
